// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`runTests() can run all tests 1`] = `
{
  "exitCode": 1,
  "files": [
    {
      "file": "path/to/example4.test.ts",
      "status": "fail",
      "summary": {
        "duration": 1,
        "fail": 1,
        "files": 1,
        "pass": 0,
        "skip": 1,
        "tests": 1,
        "todo": 2,
      },
      "tests": [
        {
          "duration": 0,
          "name": "this should skip",
          "status": "skip",
        },
        {
          "duration": 0,
          "name": "this should todo",
          "status": "todo",
        },
        {
          "duration": 0,
          "errors": [
            {
              "message": "expect(received).toBe(expected)\n\nExpected: false\nReceived: true\n",
              "name": "Error",
              "preview": "10 |           test.todo(\"this should todo and fail\", () => {\n11 |             expect(true).toBe(false);\n                ^",
              "stack": [
                {
                  "column": 12,
                  "file": "path/to/example4.test.ts",
                  "function": undefined,
                  "line": 11,
                },
              ],
            },
          ],
          "name": "this should todo and fail",
          "status": "todo",
        },
        {
          "duration": 0,
          "name": "this should todo and pass",
          "status": "fail",
        },
      ],
    },
  ],
  "info": {
    "arch": undefined,
    "name": "bun test",
    "os": undefined,
    "revision": "",
    "version": "",
  },
  "stderr": "",
  "stdout": "",
  "summary": {
    "duration": 1,
    "fail": 1,
    "files": 1,
    "pass": 0,
    "skip": 1,
    "tests": 1,
    "todo": 2,
  },
}
`;

exports[`runTests() can run all tests 2`] = `
{
  "exitCode": 0,
  "files": [
    {
      "file": "example2.spec.js",
      "status": "pass",
      "summary": {
        "duration": 1,
        "fail": 0,
        "files": 1,
        "pass": 1,
        "skip": 0,
        "tests": 1,
        "todo": 0,
      },
      "tests": [
        {
          "duration": 1,
          "name": "this should pass",
          "status": "pass",
        },
      ],
    },
  ],
  "info": {
    "arch": undefined,
    "name": "bun test",
    "os": undefined,
    "revision": "",
    "version": "",
  },
  "stderr": "",
  "stdout": "",
  "summary": {
    "duration": 1,
    "fail": 0,
    "files": 1,
    "pass": 1,
    "skip": 0,
    "tests": 1,
    "todo": 0,
  },
}
`;

exports[`runTests() can run all tests 3`] = `
{
  "exitCode": 1,
  "files": [
    {
      "file": "example3.test.mjs",
      "status": "fail",
      "summary": {
        "duration": 1,
        "fail": 2,
        "files": 1,
        "pass": 0,
        "skip": 0,
        "tests": 2,
        "todo": 0,
      },
      "tests": [
        {
          "duration": 1,
          "errors": [
            {
              "message": "expect(received).toBe(expected)\n\nExpected: false\nReceived: true\n",
              "name": "Error",
              "preview": "1 | \n2 |       import { test, expect } from \"bun:test\";\n3 | \n4 |       test(\"this should fail\", () => {\n5 |         expect(true).toBe(false);\n            ^",
              "stack": [
                {
                  "column": 8,
                  "file": "example3.test.mjs",
                  "function": undefined,
                  "line": 5,
                },
              ],
            },
          ],
          "name": "this should fail",
          "status": "fail",
        },
        {
          "duration": 1,
          "errors": [
            {
              "message": "test \"this should timeout\" timed out after 1ms",
              "name": "Timeout",
            },
          ],
          "name": "this should timeout",
          "status": "fail",
        },
      ],
    },
  ],
  "info": {
    "arch": undefined,
    "name": "bun test",
    "os": undefined,
    "revision": "",
    "version": "",
  },
  "stderr": "",
  "stdout": "",
  "summary": {
    "duration": 1,
    "fail": 2,
    "files": 1,
    "pass": 0,
    "skip": 0,
    "tests": 2,
    "todo": 0,
  },
}
`;

exports[`runTests() can run all tests 4`] = `
{
  "exitCode": 0,
  "files": [
    {
      "file": "example1.test.ts",
      "status": "pass",
      "summary": {
        "duration": 1,
        "fail": 0,
        "files": 1,
        "pass": 0,
        "skip": 0,
        "tests": 0,
        "todo": 0,
      },
      "tests": [],
    },
  ],
  "info": {
    "arch": undefined,
    "name": "bun test",
    "os": undefined,
    "revision": "",
    "version": "",
  },
  "stderr": "",
  "stdout": "",
  "summary": {
    "duration": 1,
    "fail": 0,
    "files": 1,
    "pass": 0,
    "skip": 0,
    "tests": 0,
    "todo": 0,
  },
}
`;

exports[`runTests() can run all tests 5`] = `
{
  "files": [
    {
      "file": "path/to/example4.test.ts",
      "status": "fail",
      "summary": {
        "duration": 1,
        "fail": 1,
        "files": 1,
        "pass": 0,
        "skip": 1,
        "tests": 1,
        "todo": 2,
      },
      "tests": [
        {
          "duration": 0,
          "name": "this should skip",
          "status": "skip",
        },
        {
          "duration": 0,
          "name": "this should todo",
          "status": "todo",
        },
        {
          "duration": 0,
          "errors": [
            {
              "message": "expect(received).toBe(expected)\n\nExpected: false\nReceived: true\n",
              "name": "Error",
              "preview": "10 |           test.todo(\"this should todo and fail\", () => {\n11 |             expect(true).toBe(false);\n                ^",
              "stack": [
                {
                  "column": 12,
                  "file": "path/to/example4.test.ts",
                  "function": undefined,
                  "line": 11,
                },
              ],
            },
          ],
          "name": "this should todo and fail",
          "status": "todo",
        },
        {
          "duration": 0,
          "name": "this should todo and pass",
          "status": "fail",
        },
      ],
    },
    {
      "file": "example2.spec.js",
      "status": "pass",
      "summary": {
        "duration": 1,
        "fail": 0,
        "files": 1,
        "pass": 1,
        "skip": 0,
        "tests": 1,
        "todo": 0,
      },
      "tests": [
        {
          "duration": 1,
          "name": "this should pass",
          "status": "pass",
        },
      ],
    },
    {
      "file": "example3.test.mjs",
      "status": "fail",
      "summary": {
        "duration": 1,
        "fail": 2,
        "files": 1,
        "pass": 0,
        "skip": 0,
        "tests": 2,
        "todo": 0,
      },
      "tests": [
        {
          "duration": 1,
          "errors": [
            {
              "message": "expect(received).toBe(expected)\n\nExpected: false\nReceived: true\n",
              "name": "Error",
              "preview": "1 | \n2 |       import { test, expect } from \"bun:test\";\n3 | \n4 |       test(\"this should fail\", () => {\n5 |         expect(true).toBe(false);\n            ^",
              "stack": [
                {
                  "column": 8,
                  "file": "example3.test.mjs",
                  "function": undefined,
                  "line": 5,
                },
              ],
            },
          ],
          "name": "this should fail",
          "status": "fail",
        },
        {
          "duration": 1,
          "errors": [
            {
              "message": "test \"this should timeout\" timed out after 1ms",
              "name": "Timeout",
            },
          ],
          "name": "this should timeout",
          "status": "fail",
        },
      ],
    },
    {
      "file": "example1.test.ts",
      "status": "pass",
      "summary": {
        "duration": 1,
        "fail": 0,
        "files": 1,
        "pass": 0,
        "skip": 0,
        "tests": 0,
        "todo": 0,
      },
      "tests": [],
    },
  ],
  "info": {
    "arch": undefined,
    "name": "bun test",
    "os": undefined,
    "revision": "",
    "version": "",
  },
  "summary": {
    "duration": 1,
    "fail": 3,
    "files": 4,
    "pass": 1,
    "skip": 1,
    "tests": 4,
    "todo": 2,
  },
}
`;

exports[`runTest() can run a test 1`] = `
{
  "exitCode": 0,
  "files": [
    {
      "file": "example2.test.ts",
      "status": "pass",
      "summary": {
        "duration": 1,
        "fail": 0,
        "files": 1,
        "pass": 1,
        "skip": 0,
        "tests": 1,
        "todo": 0,
      },
      "tests": [
        {
          "duration": 1,
          "name": "this should pass",
          "status": "pass",
        },
      ],
    },
  ],
  "info": {
    "arch": undefined,
    "name": "bun test",
    "os": undefined,
    "revision": "",
    "version": "",
  },
  "stderr": "",
  "stdout": "",
  "summary": {
    "duration": 1,
    "fail": 0,
    "files": 1,
    "pass": 1,
    "skip": 0,
    "tests": 1,
    "todo": 0,
  },
}
`;

exports[`runTest() can run a test with a symlink 1`] = `
{
  "exitCode": 1,
  "files": [
    {
      "file": "example1.ts",
      "status": "fail",
      "summary": {
        "duration": 1,
        "fail": 1,
        "files": 1,
        "pass": 1,
        "skip": 1,
        "tests": 2,
        "todo": 1,
      },
      "tests": [
        {
          "duration": 1,
          "name": "this should pass",
          "status": "pass",
        },
        {
          "duration": 1,
          "errors": [
            {
              "message": "expect(received).toBe(expected)\n\nExpected: false\nReceived: true\n",
              "name": "Error",
              "preview": "4 |       test(\"this should pass\", () => {\n5 |         expect(true).toBe(true);\n6 |       });\n7 | \n8 |       test(\"this should fail\", () => {\n9 |         expect(true).toBe(false);\n            ^",
              "stack": [
                {
                  "column": 8,
                  "file": "example1.ts",
                  "function": undefined,
                  "line": 9,
                },
              ],
            },
          ],
          "name": "this should fail",
          "status": "fail",
        },
        {
          "duration": 0,
          "name": "this should skip",
          "status": "skip",
        },
        {
          "duration": 0,
          "name": "this should todo",
          "status": "todo",
        },
      ],
    },
  ],
  "info": {
    "arch": undefined,
    "name": "bun test",
    "os": undefined,
    "revision": "",
    "version": "",
  },
  "stderr": "",
  "stdout": "",
  "summary": {
    "duration": 1,
    "fail": 1,
    "files": 1,
    "pass": 1,
    "skip": 1,
    "tests": 2,
    "todo": 1,
  },
}
`;

exports[`runTest() can run a test with a preload 1`] = `
{
  "exitCode": 0,
  "files": [
    {
      "file": "preload.test.ts",
      "status": "pass",
      "summary": {
        "duration": 1,
        "fail": 0,
        "files": 1,
        "pass": 1,
        "skip": 0,
        "tests": 1,
        "todo": 0,
      },
      "tests": [
        {
          "duration": 1,
          "name": "test should have preloaded",
          "status": "pass",
        },
      ],
    },
  ],
  "info": {
    "arch": undefined,
    "name": "bun test",
    "os": undefined,
    "revision": "",
    "version": "",
  },
  "stderr": "",
  "stdout": "",
  "summary": {
    "duration": 1,
    "fail": 0,
    "files": 1,
    "pass": 1,
    "skip": 0,
    "tests": 1,
    "todo": 0,
  },
}
`;
